--- a/ILMApp/src/main/resources/new_collaborative_practice_values_subreport.jrxml
+++ b/ILMApp/src/main/resources/new_collaborative_practice_values_subreport.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-08-17T12:33:40 -->
+<!-- 2017-10-05T23:09:37 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="il_subreport" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="6ae6a1fa-441d-428f-8070-a2fb6445bfdb">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
@@ -35,17 +35,17 @@
 					<bottomPen lineWidth="0.0" lineColor="#FFFFFF"/>
 				</box>
 				<staticText>
-					<reportElement mode="Opaque" x="0" y="30" width="500" height="70" forecolor="#E65CA3" backcolor="#FFFFFF" uuid="4db1bd6e-f508-4da1-9c10-e884accd7b0a">
+					<reportElement mode="Transparent" x="0" y="30" width="150" height="30" forecolor="#E65CA3" backcolor="#FFFFFF" uuid="4db1bd6e-f508-4da1-9c10-e884accd7b0a">
 						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					</reportElement>
 					<box topPadding="0" leftPadding="25" bottomPadding="0" rightPadding="0">
 						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
 					</box>
 					<textElement textAlignment="Left" verticalAlignment="Bottom">
-						<font fontName="Raleway" size="25" isBold="false"/>
+						<font fontName="Nclusion" size="25" isBold="false"/>
 					</textElement>
-					<text><![CDATA[Inclusion Performance
-Measure™ Report]]></text>
+					<text><![CDATA[Nclusion]]></text>
 				</staticText>
 				<staticText>
 					<reportElement mode="Opaque" x="0" y="103" width="500" height="30" forecolor="#E65CA3" uuid="8566f1e1-994e-4f43-a638-a33abca8e559">
@@ -66,6 +66,35 @@ Measure™ Report]]></text>
 						<pen lineWidth="1.0"/>
 					</graphicElement>
 				</line>
+				<staticText>
+					<reportElement mode="Transparent" x="120" y="30" width="250" height="30" forecolor="#E65CA3" backcolor="#FFFFFF" uuid="be9b9915-f830-42bc-b264-cc772ab5c8f2">
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+					</reportElement>
+					<box topPadding="0" leftPadding="25" bottomPadding="0" rightPadding="0">
+						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
+					</box>
+					<textElement textAlignment="Left" verticalAlignment="Bottom" markup="styled">
+						<font fontName="Raleway" size="25" isBold="false"/>
+					</textElement>
+					<text><![CDATA[<b>measure report</b>]]></text>
+				</staticText>
+				<staticText>
+					<reportElement mode="Transparent" x="93" y="30" width="50" height="30" forecolor="#E65CA3" backcolor="#FFFFFF" uuid="28eebcec-1862-4f89-a37e-f41d5d963167">
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					</reportElement>
+					<box topPadding="0" leftPadding="25" bottomPadding="0" rightPadding="0">
+						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
+					</box>
+					<textElement textAlignment="Left" verticalAlignment="Bottom">
+						<font fontName="Raleway" size="25" isBold="false"/>
+					</textElement>
+					<text><![CDATA[™]]></text>
+				</staticText>
 			</frame>
 		</band>
 	</pageHeader>
