--- a/ILMApp/src/main/resources/new_inclusive_leadership_subreport.jrxml
+++ b/ILMApp/src/main/resources/new_inclusive_leadership_subreport.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-07-29T11:45:30 -->
+<!-- 2017-10-05T22:41:23 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="il_subreport" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="6ae6a1fa-441d-428f-8070-a2fb6445bfdb">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
@@ -35,19 +35,6 @@
 					<bottomPen lineWidth="0.0" lineColor="#FFFFFF"/>
 				</box>
 				<staticText>
-					<reportElement mode="Transparent" x="0" y="30" width="500" height="70" forecolor="#D21A58" backcolor="#FFFFFF" uuid="4db1bd6e-f508-4da1-9c10-e884accd7b0a">
-						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
-					</reportElement>
-					<box topPadding="0" leftPadding="27" bottomPadding="0" rightPadding="0">
-						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
-					</box>
-					<textElement textAlignment="Left" verticalAlignment="Bottom" markup="styled">
-						<font fontName="Raleway" size="25" isBold="false"/>
-					</textElement>
-					<text><![CDATA[<b>Inclusion Performance
-Measure</b>™ Report]]></text>
-				</staticText>
-				<staticText>
 					<reportElement mode="Transparent" x="0" y="103" width="500" height="30" forecolor="#D21A58" uuid="8566f1e1-994e-4f43-a638-a33abca8e559">
 						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 					</reportElement>
@@ -56,6 +43,46 @@ Measure</b>™ Report]]></text>
 						<font fontName="Raleway SemiBold" size="18"/>
 					</textElement>
 					<text><![CDATA[Inclusive Leadership]]></text>
+				</staticText>
+				<staticText>
+					<reportElement mode="Transparent" x="145" y="30" width="350" height="30" forecolor="#D21A58" backcolor="#FFFFFF" uuid="f84e0412-2a95-4707-bd38-292932d8575a">
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
+					</reportElement>
+					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
+						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
+					</box>
+					<textElement textAlignment="Left" verticalAlignment="Bottom" markup="styled">
+						<font fontName="Raleway" size="25" isBold="false"/>
+					</textElement>
+					<text><![CDATA[<b>measure report</b>]]></text>
+				</staticText>
+				<staticText>
+					<reportElement mode="Transparent" x="0" y="30" width="130" height="30" forecolor="#D21A58" backcolor="#FFFFFF" uuid="503d56a1-91a6-4947-b842-8b6df7278a14">
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					</reportElement>
+					<box topPadding="0" leftPadding="25" bottomPadding="0" rightPadding="0">
+						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
+					</box>
+					<textElement textAlignment="Left" verticalAlignment="Bottom" markup="styled">
+						<font fontName="Nclusion" size="25" isBold="false"/>
+					</textElement>
+					<text><![CDATA[Nclusion]]></text>
+				</staticText>
+				<staticText>
+					<reportElement mode="Transparent" x="93" y="30" width="50" height="30" forecolor="#D21A58" backcolor="#FFFFFF" uuid="6c52a92c-5fb2-48b6-8447-bc4f1e709303">
+						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					</reportElement>
+					<box topPadding="0" leftPadding="27" bottomPadding="0" rightPadding="0">
+						<bottomPen lineWidth="0.0" lineColor="#ED6826"/>
+					</box>
+					<textElement textAlignment="Left" verticalAlignment="Bottom" markup="styled">
+						<font fontName="Raleway" size="25" isBold="false"/>
+					</textElement>
+					<text><![CDATA[™]]></text>
 				</staticText>
 			</frame>
 		</band>
